--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6 product-outline">
+					<div class="col-lg-4 col-sm-6">
 						<div class="product-item">
 							<img src="./img/cupcafe-06.png" />
 							<p>CÀ PHÊ SỮA ĐÁ - 20 GÓI</p>
@@ -126,6 +126,158 @@
 		</div>
 		</div>
 	</section>
+	<!-- blog -->
+	<section class="blogs">
+		<div class="container">
+			<div class="row menu-title">
+				<div class="col"><img src="./img/blog.png" /></div>
+				<div class="col text-right "><a href="#">XEM TẤT CẢ SẢN PHẨM</a></div>
+			</div>
+			<div class="row blog-list d-flex justify-content-between">
+				<div class="col-lg-12  ">
+					<div class="blog-item">
+						<img src="./img/hinhblog-07.png" alt="hinhblog" />
+						<span class="text-warning">TIN TỨC</span>
+						<h4>NHÀ HÀNG MỞ LẠI GIAO TẬN NƠI TẤT CẢ SẢN PHẨM</h4>
+						<p>Không để bạn phải chờ lâu thêm nữa, Nhà chính thức mở lại dịch vụ Giao hàng tận nơi cho khu
+							vực Hồ Chí Minh từ hôm nay. Bạn có...</p>
+						<button type="button" class="btn btn-warning text-white">Xem thêm</button>
+					</div>
+
+				</div>
+				<div class="col-lg-4 col-sm-12">
+					<div class="blog-item">
+						<img src="./img/hinhblog-10.png" alt="hinhblog" />
+						<span class="text-warning">TIN TỨC</span>
+						<h4>CHUỖI CỬA HÀNG MORNING HANGOUT
+							MỚI TINH, ĐỢI BẠN CHECK-IN!</h4>
+						<p>Không để bạn phải chờ lâu thêm nữa, Nhà chính thức mở lại dịch vụ Giao hàng tận nơi cho
+							khu
+							vực Hồ Chí Minh từ hôm nay. Bạn có...</p>
+						<button type="button" class="btn btn-warning text-white">Xem thêm</button>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-12">
+					<div class="blog-item">
+						<img src="./img/hinhblog-08.png" alt="hinhblog" />
+						<span class="text-warning">TIN TỨC</span>
+						<h4>MORNING HANGOUT RA MẮT
+							PHIÊN BẢN APP MỚI</h4>
+						<p>Không để bạn phải chờ lâu thêm nữa, Nhà chính thức mở lại dịch vụ Giao hàng tận nơi cho
+							khu
+							vực Hồ Chí Minh từ hôm nay. Bạn có...</p>
+						<button type="button" class="btn btn-warning text-white">Xem thêm</button>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-12">
+					<div class="blog-item">
+						<img src="./img/hinhblog-09.png" alt="hinhblog" />
+						<span class="text-warning">TIN TỨC</span>
+						<h4>TOP 10 CỬA HÀNG MORNING HANGOUT
+							BẠN NÊN TRẢI NGHIỆM TẠI</h4>
+						<p>Không để bạn phải chờ lâu thêm nữa, Nhà chính thức mở lại dịch vụ Giao hàng tận nơi cho
+							khu
+							vực Hồ Chí Minh từ hôm nay. Bạn có...</p>
+						<button type="button" class="btn btn-warning text-white">Xem thêm</button>
+					</div>
+
+
+				</div>
+			</div>
+	</section>
+	<!-- cửa hàng  -->
+	<section class="store">
+		<div class="container">
+			<div class="row menu-title mb-3">
+				<div class="col">
+					<h3 class="text-warning">CỬA HÀNG</h3>
+				</div>
+			</div>
+			<div class="row main-store mb-3 bg-warning d-flex flex-row justify-content-between align-items-center">
+				<div class="col-lg-6 col-sm-12">
+					<!-- signatures - chữ ký *sig -->
+					<div class="text-white">
+						<h4>MORNING HANGOUT COFFEE SIGNATURE</h4>
+						<p>Với những nghệ nhân rang tâm huyết và đội ngũ Barista tài năng cùng những câu chuyện cà phê
+							đầy
+							cảm hứng, ngôi nhà Signature 19B Phạm Ngọc Thạch, Q.3, TP.HCM là không gian dành riêng cho
+							những
+							ai trót yêu say đắm hương vị của những hạt cà phê tuyệt hảo.</p>
+					</div>
+				</div>
+				<div class="col-lg-6 col-sm-12 p-0">
+					<img src="./img/hinhcuahang-11.png" />
+				</div>
+			</div>
+			<div class="row list-store d-flex ">
+				<div class="col-lg-3 col-sm-12">
+					<img src="./img/hinhcuahang-12.png" />
+				</div>
+				<div class="col-lg-3 col-sm-12">
+					<img src="./img/hinhcuahang-12.png" />
+				</div>
+				<div class="col-lg-3 col-sm-12">
+					<img src="./img/hinhcuahang-12.png" />
+				</div>
+				<div class="col-lg-3 col-sm-12">
+					<img src="./img/hinhcuahang-12.png" />
+				</div>
+			</div>
+
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-2 col-sm-2">
+					<img src="./img/footer.png" alt="logo-footer" />
+				</div>
+				<div class="col-lg-3 col-sm-2 text-white">
+					<h5>ABOUT</h5>
+					<p>Về Chúng Tôi</p>
+					<p>Hạt Cà Phê MORNING HANGOUT</p>
+					<p>Blog</p>
+					<p>Cơ Hội Nghề Nghiệp</p>
+					<p>Cửa Hàng</p>
+				</div>
+				<div class="col-lg-3 col-sm-2  text-white">
+					<h5>ALWAYS-ON SUPPORT</h5>
+					<p>Delivery 1800 6936 (07:00-21:00)
+						Support 028.71.087.088 (07:00-21:00) </p>
+
+
+				</div>
+				<div class="col-lg-3 col-sm-2 text-white">
+					<h5>Address</h5>
+					<p>86 - 88 Cao Thang, Ward 4, District 3, Ho Chi Minh, Vietnam.
+						<br />
+						+842871 078 079
+						hi@morningcoffee.vn
+					</p>
+				</div>
+				<!-- <div class="col-lg-1 col-sm-2 text-white">
+					<h5>DELIVERY</h5>
+					<p>Shipping methods</p>
+					<p>Payment</p>
+					<p>Cash voucher</p>
+					<p>Return</p>
+					<p>Exchange</p>
+				</div> -->
+			</div>
+			<hr />
+			<div class="Copyright row">
+				<div class="col text-white">
+					<p>Copyright © 2021 MORNING HANGOUT COFFEE. All rights reserved.</p>
+				</div>
+				<div class="col float-right">
+					<img src="./img/last.png" />
+				</div>
+
+			</div>
+		</div>
+
+	</footer>
+
 
 	<!-- jQuery -->
 	<script src="js/jquery-3.5.1.min.js"></script>
