--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Style CSS -->
 	<link rel="stylesheet" href="././css/style.css">
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
@@ -48,8 +48,8 @@
 	<section class="show-product">
 		<div class="container">
 			<div class="row menu-title">
-				<div class="col"><img src="./img/menu-logo.png" /></div>
-				<div class="col text-right"><a href="#">XEM TẤT CẢ SẢN PHẨM</a></div>
+				<div class="col-4"><img src="./img/menu-logo.png" /></div>
+				<div class="col"><a href="#" class="titleText text-nowrap float-right">XEM TẤT CẢ SẢN PHẨM</a></div>
 			</div>
 			<div class="product-list">
 				<div class="row d-flex justify-content-around">
@@ -161,8 +161,8 @@
 					<div class="blog-item">
 						<img src="./img/hinhblog-08.png" alt="hinhblog" />
 						<span class="text-warning">TIN TỨC</span>
-						<h4>MORNING HANGOUT RA MẮT
-							PHIÊN BẢN APP MỚI</h4>
+						<h4>TOP 10 CỬA HÀNG MORNING HANGOUT
+							BẠN NÊN TRẢI NGHIỆM TẠI</h4>
 						<p>Không để bạn phải chờ lâu thêm nữa, Nhà chính thức mở lại dịch vụ Giao hàng tận nơi cho
 							khu
 							vực Hồ Chí Minh từ hôm nay. Bạn có...</p>
@@ -209,17 +209,17 @@
 					<img src="./img/hinhcuahang-11.png" />
 				</div>
 			</div>
-			<div class="row list-store d-flex ">
-				<div class="col-lg-3 col-sm-12">
+			<div class="row list-store ">
+				<div class="col-lg-3 col my-2 imgStore">
 					<img src="./img/hinhcuahang-12.png" />
 				</div>
-				<div class="col-lg-3 col-sm-12">
+				<div class="col-lg-3 col  my-2 imgStore">
 					<img src="./img/hinhcuahang-12.png" />
 				</div>
-				<div class="col-lg-3 col-sm-12">
+				<div class="col-lg-3 col my-2 imgStore">
 					<img src="./img/hinhcuahang-12.png" />
 				</div>
-				<div class="col-lg-3 col-sm-12">
+				<div class="col-lg-3 col my-2 imgStore">
 					<img src="./img/hinhcuahang-12.png" />
 				</div>
 			</div>
@@ -229,40 +229,34 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-2 col-sm-2">
+				<div class="col-lg-3 col-sm-12  mb-3 text-center">
 					<img src="./img/footer.png" alt="logo-footer" />
 				</div>
-				<div class="col-lg-3 col-sm-2 text-white">
+				<div class="col text-white">
 					<h5>ABOUT</h5>
 					<p>Về Chúng Tôi</p>
-					<p>Hạt Cà Phê MORNING HANGOUT</p>
 					<p>Blog</p>
 					<p>Cơ Hội Nghề Nghiệp</p>
 					<p>Cửa Hàng</p>
 				</div>
-				<div class="col-lg-3 col-sm-2  text-white">
+				<div class="col  text-white">
 					<h5>ALWAYS-ON SUPPORT</h5>
-					<p>Delivery 1800 6936 (07:00-21:00)
+					<p>Delivery 1800 6936 
+						<br />
+						(07:00-21:00)
+						<br />
 						Support 028.71.087.088 (07:00-21:00) </p>
 
 
 				</div>
-				<div class="col-lg-3 col-sm-2 text-white">
-					<h5>Address</h5>
+				<div class="col text-white">
+					<h5>ADDRESS</h5>
 					<p>86 - 88 Cao Thang, Ward 4, District 3, Ho Chi Minh, Vietnam.
 						<br />
 						+842871 078 079
 						hi@morningcoffee.vn
 					</p>
 				</div>
-				<!-- <div class="col-lg-1 col-sm-2 text-white">
-					<h5>DELIVERY</h5>
-					<p>Shipping methods</p>
-					<p>Payment</p>
-					<p>Cash voucher</p>
-					<p>Return</p>
-					<p>Exchange</p>
-				</div> -->
 			</div>
 			<hr />
 			<div class="Copyright row">
